...
                android:textAlignment="center"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_combustible"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />

...
                android:textAlignment="center"
                android:textColor = "?android:textColorPrimary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_CCAA"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1" />

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBoxSi"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:checked="false"
                    android:duplicateParentState="true"
                    android:text="Si"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/checkBoxNo"
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20sp"
                    android:layout_weight="1"
                    android:checked="true"
                    android:duplicateParentState="false"
                    android:text="No"
                    android:textSize="20sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btnResetearPermanentes"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="reseteaPermanentes"
                android:text="Resetear" />

            <Button
                android:id="@+id/btnGuardarPermanentes"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:onClick="guardaPermanentes"
...
