...
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo"
        tools:text="TextView" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor = "?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/tv95"
...
